<resources>
    <string name="app_name">GoncalvesNicerShop</string>
    <string name="welcome_text">Welcome to the Gonçalves Shop!</string>
    <string name="application_heading">Gonçalves Shop</string>
    <string name="welcome_description">With a Click of a Button, Feast Your Eyes on My Music Collection</string>
    <string name="shopping_button">Begin Shopping</string>
    <string name="checkout_button">Proceed to Checkout</string>
    <string name="album_subtotal_1">$0.00</string>
    <string name="album_subtotal_2">$0.00</string>
    <string name="album_subtotal_3">$0.00</string>
    <string name="album_subtotal_4">$0.00</string>
    <string name="album_subtotal_5">$0.00</string>
    <string name="album_subtotal_6">$0.00</string>
    <string name="album_subtotal_7">$0.00</string>
    <string name="album_subtotal_8">$0.00</string>
    <string name="album_subtotal_9">$0.00</string>
    <string name="album_subtotal_10">$0.00</string>
    <string name="album_price_1">$14.99</string>
    <string name="album_price_2">$12.50</string>
    <string name="album_price_3">$11.74</string>
    <string name="album_price_4">$10.23</string>
    <string name="album_price_5">$9.99</string>
    <string name="album_price_6">$16.38</string>
    <string name="album_price_7">$15.55</string>
    <string name="album_price_8">$11.45</string>
    <string name="album_price_9">$12.34</string>
    <string name="album_price_10">$13.10</string>
    <string name="album_quantity_1">0</string>
    <string name="album_quantity_2">0</string>
    <string name="album_quantity_3">0</string>
    <string name="album_quantity_4">0</string>
    <string name="album_quantity_5">0</string>
    <string name="album_quantity_6">0</string>
    <string name="album_quantity_7">0</string>
    <string name="album_quantity_8">0</string>
    <string name="album_quantity_9">0</string>
    <string name="album_quantity_10">0</string>
    <string name="album_description_1">Joe Perry Can Travel Far and Wide!</string>
    <string name="album_description_2">Pete Townshend Becomes Spiritual…</string>
    <string name="album_description_3">Eddie Vedder Keeps His Baritone True.</string>
    <string name="album_description_4">Kurt Cobain and Dave Grohl Rock!</string>
    <string name="album_description_5">David Lee Roth Can Really Shout!</string>
    <string name="album_description_6">Bono Stays Pure in the Name of Love.</string>
    <string name="album_description_7">Angus Young Rides on the Highway!</string>
    <string name="album_description_8">Jon Anderson Soars Around the World.</string>
    <string name="album_description_9">Micheal Stripe Exposes from Bushes…</string>
    <string name="album_description_10">Roger Water\'s Most Anti-War Piece.</string>
    <string name="album_title_1">Journey - Escape</string>
    <string name="album_title_2">The Who - Tommy</string>
    <string name="album_title_3">Pearl Jam - Ten</string>
    <string name="album_title_4">Nirvana - Nevermind</string>
    <string name="album_title_5">Van Halen – 1984</string>
    <string name="album_title_6">U2 - The Joshua Tree</string>
    <string name="album_title_7">AC/DC - High Voltage</string>
    <string name="album_title_8">Yes - Fragile</string>
    <string name="album_title_9">R.E.M. - Murmur</string>
    <string name="album_title_10">Pink Floyd - The Wall</string>
    <string name="subtotal_title">Subtotal:</string>
    <string name="shipping_total_title">Shipping:</string>
    <string name="final_subtotal_title">Final Subtotal:</string>
    <string name="tps_total_title">TPS Total:</string>
    <string name="tvq_total_title">TVQ Total:</string>
    <string name="final_total_title">Final Total:</string>
    <string name="thanking_text">Thank You for Shopping!</string>
    <string name="album_cover_1">journey_escape</string>
    <string name="album_cover_2">the_who_tommy</string>
    <string name="album_cover_3">pearl_jam_ten</string>
    <string name="album_cover_4">nirvana_nevermind</string>
    <string name="album_cover_5">van_halen_1984</string>
    <string name="album_cover_6">u2_joshua_tree</string>
    <string name="album_cover_7">ac_dc_high_voltage</string>
    <string name="album_cover_8">yes_fragile</string>
    <string name="album_cover_9">rem_murmur</string>
    <string name="album_cover_10">pink_floyd_the_wall</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="album_cover">album_cover</string>
    <string name="action_new_option_message">You selected to order all new albums.</string>
    <string name="action_like_new_message">You selected to order all albums that are like new.</string>
    <string name="action_very_good_message">You selected to order all albums in a very good condition.</string>
    <string name="action_good_message">You selected to order all albums in good condition.</string>
    <string name="action_acceptable_message">You selected to order all albums in an acceptable condition.</string>
    <string name="new_option">New</string>
    <string name="like_new_option">Like New</string>
    <string name="very_good_option">Very Good</string>
    <string name="good_option">Good</string>
    <string name="acceptable_option">Acceptable</string>
</resources>
